new post on synonyms, add drafts (maybe_

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ markdown: kramdown
 highlighter: rouge
 color_scheme: light
 url: "https://blog.jolliffe.hk"
+collections:
+  drafts:
+    output: true
