try again with drafts

--- a/_config.yml
+++ b/_config.yml
@@ -5,5 +5,5 @@ highlighter: rouge
 color_scheme: light
 url: "https://blog.jolliffe.hk"
 collections:
-  drafts:
+  _drafts_public:
     output: true
